# oqtopus-cloud

./: .editorconfig  .gitignore  .gitmessage  .readthedocs.yaml  .tbls.yml  CITATION.cff  LICENSE  Makefile  README.md  aqua.yaml  mkdocs.yaml  pyproject.toml
.github/: CODEOWNERS  CONTRIBUTING.md  SECURITY.md  git-pr-release.erb  pull_request_template.md  release.yaml
.github/ISSUE_TEMPLATE/: BUG_REPORT.yaml  DOCUMENTATION.yaml  FEATURE_REQUEST.yaml  QUESTION.yaml  TASK.yaml
.github/workflows/: git-pr-release.yaml  labeler.yaml  python-ci.yml  release.yaml  tflint.yaml  update_version.yaml
backend/: Makefile  README.md  alembic.ini  compose.yaml
backend/alembic/: env.py
backend/alembic/versions/: 20240911__38a0365a40fd__create_devices.py  20240912__9b835b4d8801__alter_tasks_table.py  20240913__dcb77f1319fd__create_quantum_gates_table.py
backend/db/conf.d/: my.cnf
backend/db/init/: 01.schema.sql  02.insert_device.sql  03.insert_job.sql  03.insert_task.sql
backend/oas/: Makefile  README.md  redoc-static.html  redocly.yaml
backend/oas/provider/: openapi.yaml  root.yaml
backend/oas/user/: openapi.yaml  root.yaml
backend/oqtopus_cloud/common/: model_util.py  session.py
backend/oqtopus_cloud/provider/: lambda_function.py  middleware.py
backend/oqtopus_cloud/user/: conf.py  lambda_function.py  middleware.py
deployment/: README.md
deployment/oqtopus-dev/: Makefile
docs/: README.ja.md  README.md
docs/css/: custom.css
docs/en/: CODE_OF_CONDUCT.md  index.md
docs/en/architecture/: aws_system_architecture_diagram.md  sequence_diagram.md  task_state_transition_diagram.md
docs/en/developer_guidelines/: backend.md  faq.md  index.md  (+3 more)
docs/ja/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  index.md
docs/schema/: README.md  devices.md  results.md  schema.json  tasks.md
docs/terraform_modules/: README.md
operation/: README.md
operation/db/: init.sql
operation/example-dev/: Makefile
runnbooks/: README.md
runnbooks/user/: get-task.yaml  hello-name.yaml  hello-world.yaml
scripts/: setup_aqua.sh
tbls/: table.md.tmpl
terraform/: .tflint.hcl  Makefile  README.md
terraform/infrastructure/: .terraform-docs.yml  .tflint.hcl  README.md
terraform/service/: Makefile  README.md
(+148 files in other folders)
