[tool.poetry]
name = "backend"
version = "0.1.0"
description = "OQTOPUS Cloud is a project that provides the architecture of cloud quantum computers as an open-source software (OSS). By using it in conjunction with various OSS provided by [@oqtopus-team](https://github.com/oqtopus-team), you can build a cloud quantum computer system."
authors = ["oqtopus-team <oqtopus-team[at]googlegroups.com>"]
readme = "./docs/README.md"
packages = [
  {include = "oqtopus_cloud", from = "backend"},
]

[tool.poetry.dependencies]
python = "^3.12.4"
mangum = "^0.17.0"
pymysql = "^1.1.0"
aws-lambda-powertools = "^2.41.0"
sqlalchemy = "^2.0.28"
databases = "^0.9.0"
uvicorn = "^0.29.0"
cryptography = "^42.0.5"
pydantic = "^2.6.4"
fastapi = "^0.110.0"
aws-xray-sdk = "^2.13.0"


[tool.poetry.group.dev.dependencies]
boto3 = "^1.34.55"
ruff = "^0.3.4"
datamodel-code-generator = "^0.25.5"
requests = "^2.31.0"
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
pytest-env = "^1.1.3"
mypy = "^1.9.0"
case-converter = "^1.1.0"
pyyaml = "^6.0.1"
httpx = "^0.27.0"
boto3-stubs = "^1.34.74"
shandy-sqlfmt = "^0.21.2"
pytest-sqlalchemy-mock = "^0.1.5"
alembic = "^1.13.2"
mysql = "^0.0.3"


[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.5.15"
mkdocs-macros-plugin = "^1.0.5"
mkdocs-glightbox = "^0.3.7"
mkdocs-swagger-ui-tag = "^0.6.9"
mkdocs-static-i18n = "^1.2.2"
pymdown-extensions = "^10.7.1"
mkdocs-exclude = "^1.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest_env]
DB_NAME="main"
DB_USER="admin"
DB_PASS="password"
DB_HOST="localhost"
ENV="local"

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
addopts = "-vv --cov=backend/api --cov-report=xml --cov-report=html"
filterwarnings = [
  "ignore:The \\'app\\' shortcut is now deprecated. Use the explicit style \\'transport=WSGITransport\\(app=\\.\\.\\.\\)\\' instead\\.",
]

[tool.ruff]
line-length = 88
lint.unfixable = ["F401"]

[tool.mypy]
disallow-untyped-defs = true
show_error_context = true
show_column_numbers = true
ignore_missing_imports = true
no_implicit_optional = true
warn_return_any = true
check_untyped_defs = true
